--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,3 +23,68 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-container {
+  margin-top: 36px;
+}
+
+.input-text {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding: 8px 16px;
+  font-family: 'Montserrat', sans-serif;
+  color: #2E2F42;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  outline: transparent;
+}
+
+.input-text:hover {
+  border: 1px solid #000;
+}
+
+.input-text:focus {
+  border: 1px solid #4E75FF;
+}
+
+.input-text::placeholder {
+  font-family: 'Montserrat', sans-serif;
+  color: #808080;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.search-button {
+  margin-left: 8px;
+  padding: 8px 16px;
+  border-radius: 8px;
+  background-color: #4E75FF;
+  border: transparent;
+  font-family: 'Montserrat', sans-serif;
+  color: #FFF;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.search-button:hover {
+  background-color: #6C8CFF;
+}
